fix(styling): add missing row highlight assignment for Dark Mode

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -1151,6 +1151,7 @@ $slick-dark-text-color:                                   #d4d4d4 !default;
   --slick-pagination-text-color:                          #cfcfcf;
   --slick-cell-selected-color:                            #474747;
   --slick-row-selected-color:                             #474747;
+  --slick-row-highlight-background-color:                 #505050;
   --slick-scrollbar-color:                                #828282 #424242;
   --slick-sorting-header-color:                           var(--slick-base-dark-text-color);
   --slick-submenu-box-shadow:                             0 1px 3px 1px rgba(146, 152, 163, 0.4);
